# code

./: .gitattributes  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  README.html  README.md  conanfile.txt  rpg.bat  sauerbraten.bat  sauerbraten_unix  server-init.cfg  server.bat  tomatenquark.bat  tomatenquark_unix
.github/workflows/: continous-deployment.yml  continous-integration.yml  osx-ci.yml  steam-deployment.yml  ubuntu-ci.yml  windows-ci.yml
bin64/: LICENSE.mpg123.txt  LICENSE.smpeg.txt  LICENSE.tiff.txt  LICENSE.webp.txt  README-SDL.txt
bin_unix/: linux_64_client  linux_64_server  linux_client  linux_server  readme.txt
cmake/: FindSteam.cmake
cmake/triplets/: linux-ci  linux64  osx  windows32  windows64
cmake/vcpp/: tomatenquarkrc.rc
cmake/xcode/: Launcher.m  main.m  tomatenquark.plist
cmake/xcode/Resources/English.lproj/MainMenu.nib/: designable.nib  keyedobjects.nib
cmake/xcode/Resources/help/: index.html
docs/: config.html  editref.html  game.html  history.html
docs/dev/: wikistuff.html
src/: Makefile  readme_source.txt
src/assetbundler/: assetbundler.cpp  assetbundler.h  uri.cpp
src/enet/: peer.c  protocol.c
src/engine/: 3dgui.cpp  animmodel.h  bih.cpp  bih.h  blend.cpp  blob.cpp  client.cpp  command.cpp  console.cpp  cubeloader.cpp  decal.cpp  depthfx.h  dynlight.cpp  engine.h  explosion.h  glare.cpp  grass.cpp  iqm.h  lensflare.h  lightmap.cpp  lightmap.h  lightning.h  main.cpp  master.cpp  material.cpp  md2.h  md3.h  md5.h  menus.cpp  model.h  movie.cpp  mpr.h  normal.cpp  obj.h  octa.cpp  octa.h  octaedit.cpp  octarender.cpp  physics.cpp  pvs.cpp  (+23 more)
src/fpsgame/: ai.cpp  ai.h  aiman.h  capture.h  client.cpp  collect.h  ctf.h  entities.cpp  extinfo.h  fps.cpp  game.h  hideandseek.h  monster.cpp  movable.cpp  race.h  racing.h  render.cpp  scoreboard.cpp  server.cpp  waypoint.cpp  weapon.cpp
src/integration/: achievements.h  client.cpp  integration.h  steamclient.h  steamintegration.h  steamserver.h
src/lib/: enet.lib  libcurl.lib
src/lib64/: enet.lib  libcurl.lib
src/rpggame/: Makefile  ent.cpp  entities.cpp  objset.cpp  rpg.cbp  rpg.cpp  rpg.sln  rpg.vcxproj  rpg.vcxproj.filters  rpgobj.h  stats.h
src/shared/: command.h  crypto.cpp  cube.h  cube2font.c  ents.h  geom.cpp  geom.h  glemu.cpp  glemu.h  glexts.h  iengine.h  igame.h  stream.cpp  tools.cpp  tools.h  zip.cpp  zip.h
src/vcpp/: sauerbraten.cbp  sauerbraten.sln  sauerbraten.vcxproj  sauerbraten.vcxproj.filters  tomatenquark.sln  tomatenquark.vcxproj  tomatenquark.vcxproj.filters
src/vcpp/Debug64/tomatenquark.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  tomatenquark.lastbuildstate
src/xcode/: Launcher.m  buildnotes.txt  conanfile.txt  runscript  sauerbraten.plist  tomatenquark.icns  tomatenquark.plist
src/xcode/English.lproj/: InfoPlist.strings
src/xcode/Frameworks/SDL2_image.framework/Frameworks/webp.framework/Resources/: Info.plist
src/xcode/Frameworks/SDL2_image.framework/Versions/A/: SDL2_image
src/xcode/Frameworks/SDL2_image.framework/Versions/A/Frameworks/libwebp.framework/Versions/A/: libwebp
src/xcode/Frameworks/SDL2_image.framework/Versions/A/Frameworks/libwebp.framework/Versions/A/Resources/: Info.plist
src/xcode/Frameworks/SDL2_image.framework/Versions/A/_CodeSignature/: CodeResources
src/xcode/sauerbraten.xcodeproj/: project.pbxproj
src/xcode/sauerbraten.xcodeproj/project.xcworkspace/xcuserdata/fohlen.xcuserdatad/: UserInterfaceState.xcuserstate
src/xcode/sauerbraten.xcodeproj/xcuserdata/fohlen.xcuserdatad/xcschemes/: xcschememanagement.plist
src/xcode/tomatenquark.xcodeproj/: project.pbxproj
src/xcode/tomatenquark.xcodeproj/project.xcworkspace/xcuserdata/fohlen.xcuserdatad/: UserInterfaceState.xcuserstate
src/xcode/tomatenquark.xcodeproj/xcuserdata/fohlen.xcuserdatad/xcschemes/: xcschememanagement.plist
